# tmo-pdf-downloader

./: Cargo.toml
src/: errors.rs  main.rs  models.rs
src/models/: mod.rs  pages.rs  serie.rs
src/utils/: io.rs  mod.rs  network.rs  parser.rs
