[package]
name = "tmo-pdf-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap"] }
dirs = "6.0.0"
printpdf = { version = "0.8.2", default-features = false, features = ["webp"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.14"
url = "2.5.4"
